crates/keron-lang/tests/corpus/errors/parse/type_padded_nullable_run.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected `?`, expected `=`
  --> 3:17
  |
3 | val x: String ? ? = null
  |                 ^
